fix: corrige overflow

--- a/public/style/index.css
+++ b/public/style/index.css
@@ -58,6 +58,7 @@ ul {
   border: 2px solid rgba(0, 128, 128, 0.8);
   grid-area: grid-message;
   height: 500px;
+  overflow-y: scroll;
   padding: 20px;
 }
 
